--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 </header>
 <div class="container">
   <div class="side-panel">
-    <button id="add-input-btn">Add Input</button>
-    <button id="add-select-btn">Add Select</button>
-    <button id="add-textarea-btn">Add Textarea</button>
+    <h2>Components</h2>
+    <button id="add-input-btn">Add Input <span><img src="images/add.png" height="12px" alt=""></span></button>
+    <button id="add-select-btn">Add Select<span><img src="images/add.png" height="12px" alt=""></span> </button>
+    <button id="add-textarea-btn">Add Textarea <span><img src="images/add.png" height="12px" alt=""></span></button>
   </div>
   <div id="form-container">
     <form id="form">
